--- a/project.html
+++ b/project.html
@@ -27,18 +27,15 @@
         </div>
 
         <div class="second">
-            <h4>HuskyPack - Android Mobile Application Java Project</h4>
-            <p>A mobile application for NEU students to register accounts create and search for events by keywords
-                and location signup for events, parties, seminars, etc</p>
+            <h4>Anonymous Twitter - Node.JS with ReactJS Full Stack Project</h4>
+            <p>A location based anonymous Twitter app: user can only see posts sent located within radius and hashtags
+                but
+                not other user’s information for privacy and venting</p>
             <ul>
-                <li>Established UI using AndroidStudio, created multiple activities <br/> and ran application on
-                    Emulator Designed
-                    and implemented database creation, retrieving and updating using SQLite
-                </li>
-                <li>Built a backend server through Restful API for various functionality logic and communication with
-                    database
-                </li>
-                <li>Integrated Google Map API for location based search and posting</li>
+                <li>Used CSS and React to develop the front end client side application</li>
+                <li>Set schema and managed database using MongoDB and Mongoose</li>
+                <li>Created Restful API using Express JS</li>
+                <li>Utilized Geolocation API for locational data for the user and the posts</li>
             </ul>
 
         </div>
@@ -58,6 +55,30 @@
         <div class="fourth">
             <img height="250" src="./img/project-2.png" width="250">
         </div>
+
+        <div class="fifth">
+
+            <img height="250" src="./img/project-3.png" width="250">
+
+
+        </div>
+
+        <div class="sixth">
+            <h4>HuskyPack - Android Mobile Application Java Project</h4>
+            <p>A mobile application for NEU students to register accounts create and search for events by keywords
+                and location signup for events, parties, seminars, etc</p>
+            <ul>
+                <li>Established UI using AndroidStudio, created multiple activities <br/> and ran application on
+                    Emulator Designed
+                    and implemented database creation, retrieving and updating using SQLite
+                </li>
+                <li>Built a backend server through Restful API for various functionality logic and communication with
+                    database
+                </li>
+                <li>Integrated Google Map API for location based search and posting</li>
+            </ul>
+        </div>
+
     </div>
 
 
