--- a/project.html
+++ b/project.html
@@ -27,7 +27,21 @@
         </div>
 
         <div class="second">
-            <h4>Anonymous Twitter - Node.JS with ReactJS Full Stack Project</h4>
+            <h4>WineMaster - Java Database Connectivity Web Project</h4>
+            <p>A social wine cataloging tool that provides recommendations, tracks personal tasting history, and a
+                social media platform</p>
+
+            <ul>
+                <li>Data collected from Kaggle, constructed database server using MySQL and workbench</li>
+                <li>Created data access layers and servlet for tables, managed to perform CRUD operations onto database by building a JSP dynamic web project</li>
+                <li>Established project connection with Apache Tomcat server</li>
+                <li><a href="https://github.com/WineMaster-DBMS">Link to Github</a>
+                </li>
+            </ul>
+
+        </div>
+        <div class="third">
+            <h4>AnonymousT - Node.JS with ReactJS Full Stack Project</h4>
             <p>A location based anonymous Twitter app: user can only see posts sent located within radius and hashtags
                 but
                 not other user’s information for privacy and venting</p>
@@ -36,20 +50,9 @@
                 <li>Set schema and managed database using MongoDB and Mongoose</li>
                 <li>Created Restful API using Express JS</li>
                 <li>Utilized Geolocation API for locational data for the user and the posts</li>
+                <li><a href="https://anonymoustwitter.herokuapp.com">Link to App</a>
             </ul>
 
-        </div>
-        <div class="third">
-            <h4>News Web Application - Django Framework Full Stack Project</h4>
-            <p>A Django based web application which processed, analyzed, and rendered data visually resulting a
-                similar website to BuzzFeed.com</p>
-            <ul>
-                <li>Designed and created the front end user interface using HTML, CSS, Bootstrap and TKInter</li>
-                <li>Used Redis for cacheing homepage and user data to reduce response time</li>
-                <li>Created advanced searching for news articles based on time, author, etc using Elasticsearch</li>
-                <li>Built database for user information storage by PostgreSQL, saved news articles data in csv files
-                </li>
-            </ul>
 
         </div>
         <div class="fourth">
@@ -64,6 +67,21 @@
         </div>
 
         <div class="sixth">
+            <h4>News Web Application - Django Framework Full Stack Project</h4>
+            <p>A Django based web application which processed, analyzed, and rendered data visually resulting a
+                similar website to BuzzFeed.com</p>
+            <ul>
+                <li>Designed and created the front end user interface using HTML, CSS, Bootstrap and TKInter</li>
+                <li>Used Redis for cacheing homepage and user data to reduce response time</li>
+                <li>Created advanced searching for news articles based on time, author, etc using Elasticsearch</li>
+                <li>Built database for user information storage by PostgreSQL, saved news articles data in csv files
+                </li>
+            </ul>
+
+
+        </div>
+
+        <div class="seventh">
             <h4>HuskyPack - Android Mobile Application Java Project</h4>
             <p>A mobile application for NEU students to register accounts create and search for events by keywords
                 and location signup for events, parties, seminars, etc</p>
@@ -76,8 +94,13 @@
                     database
                 </li>
                 <li>Integrated Google Map API for location based search and posting</li>
+
             </ul>
         </div>
+
+        <div class="eighth">
+
+            <img height="250" src="./img/project-4.png" width="250">
 
     </div>
 
